# MetaHackProject

./: Dockerfile  README.md  app.py  baseline_inference.py  environment.py  error.txt  inference.py  mock_data.json  openenv.yaml  push_err.txt  pyproject.toml  requirements.txt  tasks.py  test_graders.py
.github/workflows/: sync_to_hf.yml
dashboard/: package-lock.json
dashboard/src/: App.css  App.jsx  index.css
server/: app.py
