[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "A customer support email triage environment where an agent reads, categorizes, queries a customer database, and drafts responses."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "openenv>=0.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi",
    "uvicorn",
    "websockets",
    "pytest"
]
